static/style.less
@white: #FFF;
@gray: #EDEDED;
@dark: #42433F;
@red:#E23C03;
@green: #B8DC3C;
@blue: #A3B6C5;
@default-font: Helvetica-Neue, Helvetica, Arial, sans-serif;

body {
    font-family: @default-font;
    font-weight: 300;
    background-color: @white;
    color: @dark;
    margin: 0px;
    padding: 0px;
}

//
// Generic UI stuff
//
button,
input[type=button] {
    display: inline-block;
    font-family: @default-font;
    font-size: 16px;
    font-weight: 300;
    background: @white;
    border: 0px;
    color: @red;
    padding: 1px 10px 5px 10px;
    cursor: pointer;
}

button:hover,
input[type=button]:hover {
    background: @red;
    color: @white;
}

input[type=button]:disabled {
    background: @gray;
    color: @dark;
}

input[type=text] {
    display: block;
    font-family: @default-font;
    font-size: 16px;
    color: @dark;
    border: 1px solid @gray;
    padding: 5px;
    outline: none;

    &.full {
        display: block;
        box-sizing: border-box;
        width: 100%;
    }

    &.no_border {
        border: 0px;
    }
}

a {
    color: @red;
    text-decoration: none;
    font-weight: 400;

    &:hover {
        color: @dark;
    }
}

.top {
    background: @dark;
    color: @white;

    .title {
        font-family: 'Amatic SC', cursive;
        font-size: 32px;
        display: inline-block;
        color: @white;
        text-decoration: none;
        padding: 5px 20px 5px 20px;
    }

    .username {
        float: right;
        line-height: 51px;
        padding: 0px 20px 0px 20px;
    }

    .username:hover {
        background: @red;
        color: @white;
        cursor: hover;
    }
}

.content {
    position: absolute;
    top: 51px;
    bottom: 0;
    left: 0;
    right: 0;
}

.screen {
    position: fixed;
    background: #000;
    opacity: .75;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    z-index: 2;
}

.prompt {
    position: fixed;
    top: 100px;
    left: 50%;
    width: 400px;
    padding: 10px;
    margin-left: -210px;
    background: @gray;
    color: @red;

    h1 {
        margin: 0px 0px 7px 0px;
        font-size: 24px;
        font-weight: 400;
        text-align: center;
    }

    p {
        color: @dark;
    }

    .rooms {
        height: 250px;
        background-color: @white;
        overflow-y: auto;
        margin-bottom: 10px;

        .room {
            font-size: 18px;
            padding: 15px;
            cursor: pointer;
            border-bottom: 1px solid @gray;
        }

        .room:nth-last-child(1) {
            border-bottom: 0px;
        }

        .room-true {
            background-color: @red;
            color: @white;
        }
    }

    .action {
        margin-top: 10px;
        padding: 10px;
        position: relative;
        right: 2px;
    }

    &.overlay {
        z-index: 3;
    }
}

.now-playing {
    text-align: center;
    border-bottom: 1px solid @gray;
    padding-bottom: 10px;
    margin: 0px;
    
    .now-playing-artist {
        font-family: 'Monoton', cursive;
        text-transform: lowercase;
        font-size: 48px;
        font-weight: 400;
        color: @red;
    }

    .now-playing-track {
        font-family: 'Pompiere', cursive; 
        font-size: 24px;
    }

    .vote {
        text-decoration: none;
        display: inline-block;
        margin-top: 5px;
        padding: 10px 15px 10px 15px;
    }

    .vote.good {
        color: @green;
    }

    .vote.good:hover, .vote.good-true {
        background: @green;
        color: @white;
    }

    .vote.bad {
        color: @red;
    }

    .vote.bad:hover, .vote.bad-true {
        background: @red;
        color: @white;
    }
}

.stage {
    position: relative;
    border-bottom: 1px solid @gray;
    text-align: center;
    margin: 0px;
    padding: 0px;
    height: 40px;

    .dj, .become-dj {
        display: inline-block;
        padding: 5px 20px 5px 20px !important;
        height: 30px;
        line-height: 30px;
        cursor: pointer;

        img {
            display: inline-block;
            margin-right: 5px;
            width: 1.75em;
            height: 1.75em;
            border-radius: .875em;
            vertical-align: middle;

            &.vote-true {
                -webkit-animation: anim-vote-true 1.5s infinite linear;
            }
        }

        &.dj-true {
            background: @red;
            color: @white;
            -webkit-animation: anim-dj-active 2s infinite linear;
        }

        &.local-true {
            color: @blue;
            font-weight: 500;
        }
    }

    .become-dj {
        color: @red;
        /*float: right;*/
        position: absolute;
        right: 287px;

        &:hover {
            background: @red;
            color: @white;
        }
    }
}

.audience {
    float: left;

    .listener {
        display: inline-block;
        padding: 10px;
        text-align: center;
        padding: 10px;

        img {
            position: relative;
            width: 40px;
            height: 40px;
            border-radius: 20px;
            border: 1px @gray solid;

            &.vote-true {
                -webkit-animation: anim-vote-true 1.5s infinite linear;
            }
        }

        &.local-true {
            color: @blue;
            font-weight: 500;
        }
    }
}

.sidebar {
    box-sizing: border-box;
    float: right;
    position: relative;
    width: 275px;
    min-width: 25%;
    max-width: 50%;
    height: 100%;
    min-height: 350px;
    background-color: white;
    border-left: 1px solid @gray;
    border-bottom: 1px solid @gray;
    z-index: 1;

    .sidebar-content {
        clear: both;
        position: absolute;
        top: 30px;
        bottom: 0px;
        width: 100%;

        .panel {
            position: absolute;
            top: 0px;
            bottom: 0px;
            width: 100%;
        }
    }

    .tabs {
        .tab {
            float: right;
            box-sizing: content-box;
            text-align: center;
            width: 50%;
            padding: 5px 0px 5px 0px;
            border-bottom: 1px solid @gray;
            cursor: pointer;
        }

        .tab.tab-true {
            background-color: @gray;
        }

        .tab.new-messages-true {
            background: @red;
            color: @white;
        }
    }

    .no_messages {
        text-align: center;
        padding: 15px;
    }

    .messages {
        position: absolute;
        top: 0px;
        bottom: 30px;
        width: 100%;
        overflow-y: auto;
        overflow-x: hidden;
        word-break: break-word;
    }

    .message {
        padding: 5px 10px 5px 10px;

        .author {
            display: inline-block;
            font-weight: 400;
        }

        .author:after {
            content: ":";
        }

        .text {
            display: inline-block;
        }
    }

    .new_message {
        border-bottom: 0px;
        border-left: 0px;
        border-right: 0px;
        box-sizing: border-box;
        width: 100%;
        position: absolute;
        bottom: 0px;
        outline: 0px;
        height: 30px;
    }

    .upload {
        text-align: center;
        padding: 15px 0px 15px 0px;
    }

    ul.songs {
        padding: 0;
        margin: 0;
        overflow: auto;
        position: absolute;
        bottom: 0;
        top: 50px;
        width: 100%;

        li {
            list-style-type: none;
            padding: 10px;
            border-top: 1px solid @gray;
            font-size: 14px;
        }
    }
}

/*
* Animations
*/
@-webkit-keyframes anim-dj-active {
    0% {
        opacity: 1;
    }

    50% {
        opacity: .85;
    }

    100% {
        opacity: 1;
    }
}

@-webkit-keyframes anim-vote-true {
    0% {
        -webkit-transform: rotate(0deg) translate(0px, 0px) scale(1);
    }

    25% {
        -webkit-transform: rotate(7deg) translate(3px, 3px) scale(1.03);
    }

    50% {
        -webkit-transform: rotate(0deg) translate(0px, 0px) scale(1);
    }

    75% {
        -webkit-transform: rotate(-7deg) translate(-3px, 3px) scale(1.03);
    }

    100% {
        -webkit-transform: rotate(0deg) translate(0px, 0px) scale(1);
    }
}

